# AntaresRS

./: README.md  changelog.md  update.json
.github/scripts/: compile_zip.sh  generatesha256.sh
.github/workflows/: build.yml
cargo/: Cargo.toml
cargo/src/: main.rs
jni/: Android.mk  main.c
jni/include/: AZenith.h
jni/src/: AZenith_log.c  AZenith_profiler.c  file_utils.c  game_preload.c  misc_utils.c  process_utils.c
mainfiles/: customize.sh  module.prop  service.sh  uninstall.sh
tweakfls/: sys.azenith-profilesettings.sh  sys.azenith-utilityconf.sh
webui/: package.json
webui/src/: index.html
webui/src/public/: webui.avatar.avif  webui.banner.avif  webui.schemebanner.avif  webui.soclist.json
webui/src/scripts/: webui_utils.js
webui/src/styles/: index.css
