[package]
name = "sys-AZenithService"
version = "1.0.0"
edition = "2024"

[dependencies]
fs2 = "0.4"
libc = "0.2"
lazy_static = "1.4.0"
daemonize = "0.5"
signal-hook = "0.3"
chrono = "0.4"
glob = "0.3"
users = "0.11"
thiserror = "1.0"
nix = { version = "0.28", features = ["signal", "process", "fs"] }